spade-tests/src/snapshots/spade_tests__integration__multiple_lambda_capture_generics_are_correct.snap
---
source: spade-tests/src/integration.rs
expression: "items.iter().map(| item | format! (\"{item}\")).join(\"\\n\")"
---
entity \generic[544] () -> uint<8> {
	let e3: {} = ConstructTuple()
	let e8: () = ConstructTuple()
	let e2: uint<8> = Instance(\impl#0::call[546] )(e3, e8)
} => e2
entity \generic[545] () -> uint<8> {
	let e3: {} = ConstructTuple()
	let e8: () = ConstructTuple()
	let e2: uint<8> = Instance(\impl#0::call[547] )(e3, e8)
} => e2
entity \test () -> () {
	let e10: uint<8> = Instance(\generic[544] )()
	let a_n113: uint<8> = Alias(e10)
	let e12: uint<8> = Instance(\generic[545] )()
	let b_n114: uint<8> = Alias(e12)
	let e9: () = Nop()
} => e9
entity \impl#0::call[546] ((self, self_n111, {}), (args, args_n112, ())) -> uint<8> {
	const e4: uint<8> = 10
} => e4
entity \impl#0::call[547] ((self, self_n111, {}), (args, args_n112, ())) -> uint<8> {
	const e4: uint<8> = 20
} => e4
