spade-tests/src/snapshots/spade_tests__integration__pipelines_check_the_delay_of_last_expression.snap
---
source: spade-tests/src/integration.rs
---
pipeline(1) subpipe(clk: clock) -> bool {
reg;
    false
}

pipeline(0) test(clk: clock) -> bool {
    inst(1) subpipe(clk)
}


error: Use of result before it is ready
  ┌─ testinput:7:5
  │
7 │     inst(1) subpipe(clk)
  │     ^^^^^^^^^^^^^^^^^^^^ Use of result before it is ready
  │
  = Consider binding the result to a variable and adding the required pipeline stages
  │
7 │     let result = inst(1) subpipe(clk); reg * 1; result
  │     +++++++++++++                    +++++++++++++++++
