spade-tests/src/snapshots/spade_tests__integration__wire_in_enum_is_disallowed.snap
---
source: spade-tests/src/integration.rs
---
enum Test {
    V1{wire x: bool},
}


error: Wire can only be used on variables and function parameters
  ┌─ testinput:2:8
  │
2 │     V1{wire x: bool},
  │        ^^^^ Wire in type
